--- a/real-estate/server/.env
+++ b/real-estate/server/.env
@@ -1,3 +1,4 @@
 # DB_URL=mongodb+srv://auth:auth@cluster0.1ukmqnm.mongodb.net/test?retryWrites=true&w=majority
-DB_URL = mongodb://localhost/real_estate_app
+# DB_URL = mongodb://localhost/real_estate_app
+DB_URL = mongodb+srv://yogeshthakare:Yogesh402@real-estate-app.9carenj.mongodb.net/real_estate_app?retryWrites=true&w=majority
 JWT_KEY=sckbcmjei
